--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Shawak <maxi.nussbaum@googlemail.com>"]
 enum-primitive-derive = "^0.1"
 num-traits = "^0.1"
 rayon = "1.0"
+image = "0.19.0"
