--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,4 @@ version = "0.1.0"
 authors = ["Shawak <maxi.nussbaum@googlemail.com>"]
 
 [dependencies]
-enum-primitive-derive = "^0.1"
-num-traits = "^0.1"
-rayon = "1.0"
-image = "0.21.1"
-rand = "0.5.4"
+ot = { path = "ot" }
